<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0B0F18"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/infoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/infoTextView"
                    android:enabled="false"
                    android:gravity="bottom"
                    android:lines="2"
                    android:maxLines="2"
                    android:textSize="20sp"
                    android:autofillHints="" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:background="@color/mainColor"
            android:baselineAligned="false"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effects"
                    android:stateListAnimator="@null"
                    android:text="@string/c"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_effects"
                    android:stateListAnimator="@null"
                    android:text="@string/arrow"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonMod"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/mod"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonDiv"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/div"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_7"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_8"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_9"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonMul"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/mul"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_4"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_5"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_6"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/minus"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_1"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_2"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_3"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/plus"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonParentheses"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/parentheses"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/_0"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button"
                    android:stateListAnimator="@null"
                    android:text="@string/doubleInput"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_button_red"
                    android:stateListAnimator="@null"
                    android:text="@string/equal"
                    android:textColor="#fff"
                    android:textSize="@dimen/sizeButtonText" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>